--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
